--- a/notebooks/maths/TensorsReview.ipynb
+++ b/notebooks/maths/TensorsReview.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Review of tensors\n",
+    "# Review of tensors\n",
     "\n",
     "We present here an overview of tensors and tensor notations (also called suffix or index notation).\n",
     "\n",
@@ -20,11 +20,11 @@
     "\n",
     "Later we will introduce a special rank-3 tensor (triad), the Levi-Civita symbol $\\varepsilon_{ijk}$ which therefore has three indices, $i, j, k$.\n",
     "\n",
-    "### Stress tensor\n",
+    "## Stress tensor\n",
     "\n",
-    "To introduce the stress tensor, let us assume there is a point P in space where we want to evaluate the stress. We then draw an arbitrarily oriented surface $S$ with area $\\Delta S$ around P, with the orientation of the surface being uniquely defined by the unit normal vector $\\mathbf{n}$. Instead of dealing with the force $\\mathbf{F}$ acting on the surface, we will be dealing with its density, or the *stress*. That is, the stress is a vector quantity defined by the limit\n",
+    "To introduce the stress tensor, let us assume there is a point P in space where we want to evaluate the stress. We then draw an arbitrarily oriented surface $S$ with area $\\Delta S$ around P, with the orientation of the surface being uniquely defined by the unit normal vector $\\mathbf{n} = (n_x, n_y, n_z)$. Instead of dealing with the force $\\mathbf{F}$ acting on the surface, we will be dealing with its density, or the *stress*. That is, the stress is a vector quantity defined by the limit\n",
     "\n",
-    "$$ \\mathbf{T}_n = \\lim_{\\Delta S \\to 0} \\frac{\\mathbf{F}_n}{\\Delta S}$$,\n",
+    "$$ \\mathbf{T}_n = \\lim_{\\Delta S \\to 0} \\frac{\\mathbf{F}_n}{\\Delta S},$$\n",
     "\n",
     "where the limit $\\Delta S \\to 0$ means that the surface $S$ shrinks to point M, the point where we want to evaluate the stress. Note that the stress vector $\\mathbf{T}_n$ (often called traction vector, hence $T$) depends on the orientation of the surface (and the position of the point P, of course). This is indicated by the suffix $n$. \n",
     "\n",
@@ -53,9 +53,13 @@
     "\n",
     "We will now state without proof that the stress vector $\\mathbf{T}_n$ acting on an arbitrary surface can be easily found if we know the stress tensor. This relation is:\n",
     "\n",
-    "$$ \\mathbf{T}_n = \\mathbf{n} \\bar{\\bar{\\sigma}}. $$\n",
+    "$$ \\mathbf{T}_n = \\mathbf{n} \\bar{\\bar{\\sigma}}, $$\n",
     "\n",
-    "### Tensor indices\n",
+    "or after the multiplication:\n",
+    "\n",
+    "$$ \\mathbf{T}_n = n_x \\mathbf{T}_x + n_y \\mathbf{T}_y + n_z \\mathbf{T}_z. $$\n",
+    "\n",
+    "## Tensor indices\n",
     "\n",
     "We will most often work in three dimensions, where we can then choose an orthonormal coordinate system $(\\hat{e}_1, \\hat{e}_2, \\hat{e}_3)$ to describe any vector *v* by its three coordinates\n",
     "\n",
@@ -71,18 +75,14 @@
     "\n",
     "$$v^i \\equiv \\delta^{ij}v_j, \\quad \\quad v_i \\equiv \\delta_{ij}v^j,$$\n",
     "\n",
-    "where $\\delta_{ij}$ is the Kronecker delta and $\\delta^{ij}$ is its inverse. We will see below that this is a trivial operation and that $v_i = v^i$, as Kronecker delta functions similarly to the identity matrix, its the inverse of the identity matrix is also identity.\n",
+    "where $\\delta_{ij}$ is the Kronecker delta and $\\delta^{ij}$ is its inverse. We will see below that this is a trivial operation and that $v_i = v^i$, as Kronecker delta functions similarly to the identity matrix and its inverse is also trivially related to it.\n",
     "\n",
     "\n",
     "### Tensor operations\n",
     "\n",
-    "In order to be able to perform ... it is necessary to introduce two special tensors: the Kronecker delta $\\delta_{ij}$ and the Levi-Civita symbol $\\varepsilon_{ijk}$.\n",
+    "In order to be able to perform operations on tensors that we are probably more used to in matrix notation, it is necessary to introduce two special tensors: the Kronecker delta $\\delta_{ij}$ and the Levi-Civita symbol $\\varepsilon_{ijk}$.\n",
     "\n",
-    "$$ \\delta_{ij} = \\begin{pmatrix}\n",
-    "1 & 0 & 0 \\\\\n",
-    "0 & 1 & 0 \\\\\n",
-    "0 & 0 & 1\n",
-    "\\end{pmatrix} $$\n",
+    "Kronecker delta is a function of two variables which has a value of 1 if the two variables are the same, or 0 if they are not.\n",
     "\n",
     "$$ \\delta_{ij} = \\left\\{\n",
     "    \\begin{array}\\\\\n",
@@ -91,21 +91,21 @@
     "    \\end{array}\n",
     "\\right.$$\n",
     "\n",
+    "The values can be arranged into a 2x2 matrix, which will be identical to the identity matrix.\n",
+    "\n",
+    "The three-dimensional fully antisymmetric Levi-Civita symbol $\\varepsilon_{ijk}$ is defined by:\n",
+    "\n",
     "$$\\varepsilon_{ijk} = \\left\\{\n",
     "    \\begin{array}\\\\\n",
     "        +1 & \\mbox{if (ijk) = (123), (231), (312)} \\\\ %\\ x \\in \\mathbf{N}^* \\\\\n",
     "        -1 & \\mbox{if (ijk) = (132), (231), (321)} \\\\ %\\ x = 0 \\\\\n",
-    "         0 & \\mbox{otherwise}\n",
+    "         0 & \\mbox{otherwise (i.e. any 2 are equal)}\n",
     "    \\end{array}\n",
     "\\right. $$\n",
     "\n",
-    "$$ \\varepsilon_{ijk} = \\left\\{\n",
-    "    \\begin{array}\\\\\n",
-    "        1 & \\mbox{if (ijk) is an even perfmutation of (123)} \\\\ %\\ x \\in \\mathbf{N}^* \\\\\n",
-    "        -1 & \\mbox{if (ijk) is an odd perfmutation of (123)} \\\\ %\\ x = 0 \\\\\n",
-    "        0 & \\mbox{if any two of its indices are the same}\n",
-    "    \\end{array}\n",
-    "\\right. $$\n",
+    "That is, it is 1 if (ijk) is an even permutation of (123), -1 if (ijk) is an odd permutation of 123 and 0 if any index (ijk) is repeated. For example:\n",
+    "\n",
+    "$$ \\varepsilon_{ijk} = - \\varepsilon_{ikj} = - \\varepsilon_{jik} = \\varepsilon_{kij}.$$\n",
     "\n",
     "We can then see by direct calculation that the cross product of two vectors $\\boldsymbol{a}$ and $\\boldsymbol{b}$ in tensor notation is\n",
     "\n",
@@ -113,9 +113,13 @@
     "\n",
     "where j and k are dummy indices, while i is a *free* index as it only appears once in the term, i.e. it is not summed over. As per the definition of tensors, the number of free indices in a term denotes the rank of that term - in this case there is only one free index so the resulting object is a rank-1 tensor, i.e. a vector.\n",
     "\n",
-    "Kronecker delta\n",
+    "The inner product was already shown to be simply\n",
     "\n",
-    "$$ v_i = \\delta_{ij}v_j $$\n",
+    "$$ \\mathbf{a} \\cdot \\mathbf{b} = a_i b_i = b_i a_i. $$\n",
+    "\n",
+    "If A is an $n \\times n$ matrix, then $A_{ij} = (A^T)_{ji}$. If A is symmetric then $A_{ij} = A_{ji}$.\n",
+    "\n",
+    "#### Examples\n",
     "\n",
     "For demonstration purposes let us express some common vector identities in tensor notation:\n",
     "\n",
