--- a/notebooks/maths/TensorsReview.ipynb
+++ b/notebooks/maths/TensorsReview.ipynb
@@ -61,17 +61,17 @@
     "\n",
     "## Tensor indices\n",
     "\n",
-    "We will most often work in three dimensions, where we can then choose an orthonormal coordinate system $(\\hat{e}_1, \\hat{e}_2, \\hat{e}_3)$ to describe any vector *v* by its three coordinates\n",
+    "We will most often work in three dimensions, where we can choose an orthonormal coordinate system $(\\hat{e}_1, \\hat{e}_2, \\hat{e}_3)$ to describe any vector *v* by its three coordinates\n",
     "\n",
-    "$$ \\mathbf{v} = (v_1, v_2, v_3) = v_1\\mathbf{\\hat{e}}_1 + v_2 \\mathbf{\\hat{e}}_2 + v_3 \\mathbf{\\hat{e}}_3 = \\sum_{i=1}^3 v_i \\mathbf{\\hat{e}}_i $$,\n",
+    "$$ \\mathbf{v} = (v_1, v_2, v_3) = v_1\\mathbf{\\hat{e}}_1 + v_2 \\mathbf{\\hat{e}}_2 + v_3 \\mathbf{\\hat{e}}_3 = \\sum_{i=1}^3 v_i \\mathbf{\\hat{e}}_i, $$\n",
     "\n",
-    "where $i$ is a *dummy* index and is allowed to take values 1, 2 and 3. We can therefore represent the vector $\\mathbf{v}$ as $v_i$. Similarly, we can represent three-dimensional space by the Cartesian coordinates $(x_1, x_2, x_3)$, where $\\mathbf{x}$, or equivalently $x_i$, is a general position vector. The gradient $\\nabla$ can then be written in tensor notation as $\\frac{\\partial}{\\partial x_i}$, or sometimes even more compactly as $\\partial_i$.\n",
+    "where $i$ is a *dummy* index and is allowed to take values 1, 2 and 3. We can therefore represent the vector $\\mathbf{v}$ as $v_i$. Similarly, we can represent three-dimensional space by the Cartesian coordinates $(x_1, x_2, x_3)$, where $\\mathbf{x}$, or equivalently $x_i$, is a general position vector. In this notation $x_1$ corresponds to $x$, $x_2$ to $y$ and $x_3$ to $z$.The gradient $\\nabla$ can therefore be written in tensor notation as $\\frac{\\partial}{\\partial x_i}$, or sometimes even more compactly as $\\partial_i$.\n",
     "\n",
     "It is convenient to introduce the Einstein summation convention here. If a dummy index is repeated twice, it is implicitly understood that this represents a sum over all possible values of that index. A dummy index cannot appear more than two times in one additive term. Therefore we can simply remove the summation symbol\n",
     "\n",
     "$$ \\sum_{i=1}^3 v_i \\mathbf{\\hat{e}}_i = v_i \\mathbf{\\hat{e}}_i. $$\n",
     "\n",
-    "**Side note:** The Einstein summation convention states that the sum over an index should only be performed if that index appears once up and once down, i.e. $v_i \\hat{e}^i$. However, this notation is often abused when dealing with flat Cartesian space to avoid confusing the up-index for the power (e.g. $v^2$ is not a square of $v$). We can forgive ourselves for this (incorrect) application of the sum convention since raising and lowering an index in flat space in Cartesian coordinates is achieved as follows:\n",
+    "**Side note:** For completeness, we note that the Einstein summation convention states that the sum over an index should only be performed if that index appears once up and once down, i.e. $v_i \\hat{e}^i$. However, this notation is often abused when dealing with flat Cartesian space to avoid confusing the up-index for the power (e.g. $v^2$ is not a square of $v$). We can forgive ourselves for this (incorrect) application of the sum convention since raising and lowering an index in flat space in Cartesian coordinates is achieved as follows:\n",
     "\n",
     "$$v^i \\equiv \\delta^{ij}v_j, \\quad \\quad v_i \\equiv \\delta_{ij}v^j,$$\n",
     "\n",
@@ -107,25 +107,25 @@
     "\n",
     "$$ \\varepsilon_{ijk} = - \\varepsilon_{ikj} = - \\varepsilon_{jik} = \\varepsilon_{kij}.$$\n",
     "\n",
-    "We can then see by direct calculation that the cross product of two vectors $\\boldsymbol{a}$ and $\\boldsymbol{b}$ in tensor notation is\n",
+    "We can then see by direct calculation that the **cross product** of two vectors $\\boldsymbol{a}$ and $\\boldsymbol{b}$ in tensor notation is\n",
     "\n",
     "$$ (\\boldsymbol{a} \\times \\boldsymbol{b} )_i = \\varepsilon_{ijk} a_j b_k, $$\n",
     "\n",
     "where j and k are dummy indices, while i is a *free* index as it only appears once in the term, i.e. it is not summed over. As per the definition of tensors, the number of free indices in a term denotes the rank of that term - in this case there is only one free index so the resulting object is a rank-1 tensor, i.e. a vector.\n",
     "\n",
-    "The inner product was already shown to be simply\n",
+    "The **inner product** was already shown to be simply\n",
     "\n",
     "$$ \\mathbf{a} \\cdot \\mathbf{b} = a_i b_i = b_i a_i. $$\n",
     "\n",
-    "If A is an $n \\times n$ matrix, then $A_{ij} = (A^T)_{ji}$. If A is symmetric then $A_{ij} = A_{ji}$.\n",
+    "If A is an $n \\times n$ matrix, then $A_{ij} = (A^T)_{ji}$, where $A^T$ is the **transpose** of A. If A is symmetric then $A_{ij} = A_{ji}$.\n",
     "\n",
-    "#### Examples\n",
+    "### Examples\n",
     "\n",
     "For demonstration purposes let us express some common vector identities in tensor notation:\n",
     "\n",
-    "$$ \\mbox{Curl of a vector:} \\quad \\quad \\mathbf{a} = \\nabla \\times \\mathbf{b} \\quad \\quad a_i = \\varepsilon_{ijk} \\frac{\\partial b_k}{\\partial x_j} $$\n",
+    "$$ \\mbox{Curl of a vector:} \\quad \\quad \\mathbf{a} = \\nabla \\times \\mathbf{b} \\quad or \\quad a_i = \\varepsilon_{ijk} \\frac{\\partial b_k}{\\partial x_j} $$\n",
     "\n",
-    "$$ \\mbox{Dot product rule:} \\quad \\quad \\nabla \\cdot (\\mathbf{a} \\mathbf{b}) = \\mathbf{a} \\nabla \\cdot \\mathbf{b} + \\nabla \\mathbf{a} \\cdot \\mathbf{b} \\quad \\mbox{or} \\quad \\frac{\\partial}{\\partial x_i}(a_i F_i) = a_i \\frac{\\partial F_i}{\\partial x_i} + \\frac{\\partial \\phi}{\\partial x_i}F_i$$\n",
+    "$$ \\mbox{Dot product rule:} \\quad \\quad \\nabla \\cdot (\\mathbf{a} \\mathbf{b}) = \\mathbf{a} \\nabla \\cdot \\mathbf{b} + \\nabla \\mathbf{a} \\cdot \\mathbf{b} \\quad \\mbox{or} \\quad \\frac{\\partial}{\\partial x_i}(a_i b_i) = a_i \\frac{\\partial b_i}{\\partial x_i} + \\frac{\\partial a_i}{\\partial x_i}b_i$$\n",
     "\n",
     "$$ \\mbox{Triple vector product:} \\quad \\quad \\mathbf{a} \\times (\\mathbf{b} \\times \\mathbf{c}) = (\\mathbf{a} \\cdot \\mathbf{c})\\mathbf{b} - (\\mathbf{a} \\cdot \\mathbf{b})\\mathbf{c} \\quad \\mbox{or} \\quad \\varepsilon_{ijk}a_k(\\varepsilon_{klm}b_lc_m) = (a_jc_j)b_i - (a_jb_j)c_i $$\n",
     "\n",
@@ -150,13 +150,6 @@
     "\n",
     "$$ \\mbox{Determinant in 3D:} \\quad \\quad \\text{det}M = \\varepsilon_{ijk}m_{1i}m_{2j}m_{3k} $$\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
