Added cross product explanation

--- a/notebooks/maths/TensorsReview.ipynb
+++ b/notebooks/maths/TensorsReview.ipynb
@@ -91,7 +91,7 @@
     "    \\end{array}\n",
     "\\right.$$\n",
     "\n",
-    "The values can be arranged into a 2x2 matrix, which will be identical to the identity matrix.\n",
+    "The values can be arranged into a 2x2 matrix, which will be identical to the identity matrix. Kronecker delta can be also expressed as $\\delta_{ij}=\\mathbf{\\hat{e}}_i\\cdot\\mathbf{\\hat{e}}_j$.\n",
     "\n",
     "The three-dimensional fully antisymmetric Levi-Civita symbol $\\varepsilon_{ijk}$ is defined by:\n",
     "\n",
@@ -107,11 +107,17 @@
     "\n",
     "$$ \\varepsilon_{ijk} = - \\varepsilon_{ikj} = - \\varepsilon_{jik} = \\varepsilon_{kij}.$$\n",
     "\n",
-    "We can then see by direct calculation that the **cross product** of two vectors $\\boldsymbol{a}$ and $\\boldsymbol{b}$ in tensor notation is\n",
+    "**Cross product** $\\boldsymbol{c}$ of two vectors $\\boldsymbol{a}$ and $\\boldsymbol{b}$ in tensor notation can be expressed as:\n",
+    "\n",
+    "$$ c_k \\mathbf{\\hat{e}}_k=\\mathbf{c} = \\mathbf{a}\\times\\mathbf{b} = (a_i\\mathbf{\\hat{e}}_i)\\times (b_j\\mathbf{\\hat{e}}_j)=a_ib_j(\\mathbf{\\hat{e}}_i\\times\\mathbf{\\hat{e}}_j)\\parallel\\cdot \\mathbf{\\hat{e}}_k,\\\\\n",
+    "c_k \\mathbf{\\hat{e}}_k\\cdot\\mathbf{\\hat{e}}_k=c_k=a_i b_j (\\mathbf{\\hat{e}}_i\\times\\mathbf{\\hat{e}}_j)\\cdot\\mathbf{\\hat{e}}_k$$.\n",
+    "\n",
+    "The Levi-Civita symbol is then equal to $\\varepsilon_{ijk} = (\\mathbf{\\hat{e}}_i\\times\\mathbf{\\hat{e}}_j)\\cdot\\mathbf{\\hat{e}}_k$ and in general, cross product can be expressed in tensor notation as:\n",
     "\n",
     "$$ (\\boldsymbol{a} \\times \\boldsymbol{b} )_i = \\varepsilon_{ijk} a_j b_k, $$\n",
     "\n",
     "where j and k are dummy indices, while i is a *free* index as it only appears once in the term, i.e. it is not summed over. As per the definition of tensors, the number of free indices in a term denotes the rank of that term - in this case there is only one free index so the resulting object is a rank-1 tensor, i.e. a vector.\n",
+    "\n",
     "\n",
     "The **inner product** was already shown to be simply\n",
     "\n",
@@ -168,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
