--- a/notebooks/coding/File_handling.ipynb
+++ b/notebooks/coding/File_handling.ipynb
@@ -8,10 +8,10 @@
     "\n",
     "Suppose we have a text file like below, from which we would like to extract temperature and density data:\n",
     "\n",
-    "$# Density of air at different temperatures, at 1 atm pressure\n",
+    "$$\n",
+    "# Density of air at different temperatures, at 1 atm pressure\n",
     "# Column 1: temperature in Celsius degrees\n",
     "# Column 2: density in kg/m^3\n",
-    ".\n",
     "  0.0   999.8425\n",
     "  4.0   999.9750\n",
     " 15.0   999.1026\n",
@@ -21,13 +21,13 @@
     " 50.0   988.04\n",
     "100.0   958.3665\n",
     "# Source: Wikipedia (keyword Density)\n",
-    ".$\n",
+    "$$\n",
     "\n",
     "## Python\n",
     "\n",
     "It is usually best to read and write files using the **with statement** which will improve our syntax and do a lot of things automatically for us (like closing the file we opened).\n",
     "\n",
-    "Our file contains 4 lines at the beginning and 2 lines at the end which we do not want to extract. Additionally, the temperature and density values are separated by whitespaces. Here is an example of how we could extract the data into two arrays:"
+    "Our file contains 3 lines at the beginning and 1 line at the end which we do not want to extract. Additionally, the temperature and density values are separated by whitespaces. Here is an example of how we could extract the data into two arrays:"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "source": [
     "with open('density_water.dat', 'r') as file:  # r for read\n",
     "    # skip extra lines by taking a slice of the file\n",
-    "    data = file.readlines()[4:-2]\n",
+    "    data = file.readlines()[3:-1]\n",
     "        \n",
     "    # initialise 2 empty arrays to store our data\n",
     "    temp, density = np.zeros(len(data)), np.zeros(len(data))\n",
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NumPy\n",
+    "## NumPy\n",
     "\n",
     "NumPy's [**genfromtxt**](https://numpy.org/doc/1.18/reference/generated/numpy.genfromtxt.html) (generate from text) function provides full control over the file which we are trying to open. It initialises a numpy array from the data. Some of the parameters include:\n",
     "    - dtype: set a data type. If not set, determines the data type automatically for each column\n",
