--- a/notebooks/coding/NumPy_Arrays.ipynb
+++ b/notebooks/coding/NumPy_Arrays.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# NumPy Arrays\n",
     "\n",
-    "Numerical Python (NumPy) provides excellent support for working with large arrays in python, along with an extensive library of mathematical functions to operate on these arrays. This notebook will cover both basic and advanced uses of NumPy, giving plenty examples on\n",
+    "Numerical Python (NumPy) provides excellent support for working with large arrays in python, along with an extensive library of mathematical functions to operate on these arrays. This notebook will introduce data types in NumPy, how to initialise an array of complex numbers, generating random arrays and array manipulation basics.\n",
     "\n",
     "## Creating and manipulating arrays\n",
     "\n",
@@ -164,7 +164,7 @@
    "source": [
     "In the first example, the two arrays were joined along axis=0, i.e. a row was appended. In the second example we wanted to join them along axis=1, which is a column. NumPy arrays require that the lengths of rows and columns match in every column or row vector, so we had to **transpose** the vector b using b.T.\n",
     "\n",
-    "What if we wanted to make a 3D array out of two 2D arrays? This is what NumPy calls **stacking** and has a general function numpy.stack() to achieve this, where we now specicy a new axis along which we want to stack our arrays. Let us stack two 2D arrays along a vertical (depth) axis, axis=2."
+    "What if we wanted to make a 3D array out of two 2D arrays? This is what NumPy calls **stacking** and has a general function numpy.stack() to achieve this, where we now specify a new axis along which we want to stack our arrays. Let us stack two 2D arrays along a vertical (depth) axis, axis=2."
    ]
   },
   {
@@ -235,7 +235,7 @@
     "\n",
     "print(A)\n",
     "\n",
-    "a = np.arange(8)   # 1D array of 16 elements\n",
+    "a = np.arange(8)   # 1D array of 8 elements\n",
     "print(a)\n",
     "\n",
     "b = a.reshape((4,2))  # reshape to a 4x2 matrix\n",
