Updated Arrays notebook

--- a/notebooks/coding/NumPy_Arrays.ipynb
+++ b/notebooks/coding/NumPy_Arrays.ipynb
@@ -68,21 +68,17 @@
    "source": [
     "a = 1   # integer\n",
     "b = 1.  # dot makes it a float\n",
-    "\n",
     "print(type(a), type(b))\n",
     "\n",
     "A = np.arange(10)  # integers\n",
-    "\n",
     "print(A)\n",
     "print(A.dtype)\n",
     "\n",
-    "A = np.arange(10).astype(np.float64)  # make array dtype float64\n",
-    "\n",
+    "A = np.arange(10, dtype=np.float64)  # assign dtype\n",
     "print(A)\n",
     "print(A.dtype)\n",
     "\n",
     "A = np.arange(10).astype(type(b))  # make array same dtype as b\n",
-    "\n",
     "print(A)\n",
     "print(A.dtype)"
    ]
