Update and rename TensorsReview.ipynb to Tensors_Review.ipynb

--- a/notebooks/maths/Tensors_Review.ipynb
+++ b/notebooks/maths/Tensors_Review.ipynb
@@ -131,7 +131,7 @@
     "\n",
     "$$ \\mbox{Curl of a vector:} \\quad \\quad \\mathbf{a} = \\nabla \\times \\mathbf{b} \\quad or \\quad a_i = \\varepsilon_{ijk} \\frac{\\partial b_k}{\\partial x_j} $$\n",
     "\n",
-    "$$ \\mbox{Dot product rule:} \\quad \\quad \\nabla \\cdot (\\mathbf{a} \\mathbf{b}) = \\mathbf{a} \\nabla \\cdot \\mathbf{b} + \\nabla \\mathbf{a} \\cdot \\mathbf{b} \\quad \\mbox{or} \\quad \\frac{\\partial}{\\partial x_i}(a_i b_i) = a_i \\frac{\\partial b_i}{\\partial x_i} + \\frac{\\partial a_i}{\\partial x_i}b_i$$\n",
+    "$$ \\mbox{Dot product rule:} \\quad \\quad \\nabla \\cdot (\\mathbf{a} \\mathbf{b}) = \\mathbf{a} \\nabla \\cdot \\mathbf{b} + \\nabla \\mathbf{a} \\cdot \\mathbf{b} \\quad \\mbox{or} \\quad \\frac{\\partial}{\\partial x_i}(\\phi a_i) = \\phi \\frac{\\partial a_i}{\\partial x_i} + \\frac{\\partial \\phi}{\\partial x_i}a_i$$\n",
     "\n",
     "$$ \\mbox{Triple vector product:} \\quad \\quad \\mathbf{a} \\times (\\mathbf{b} \\times \\mathbf{c}) = (\\mathbf{a} \\cdot \\mathbf{c})\\mathbf{b} - (\\mathbf{a} \\cdot \\mathbf{b})\\mathbf{c} \\quad \\mbox{or} \\quad \\varepsilon_{ijk}a_k(\\varepsilon_{klm}b_lc_m) = (a_jc_j)b_i - (a_jb_j)c_i $$\n",
     "\n",
