Move images and update notebooks

--- a/notebooks/geosciences/Dynamic_Earth.ipynb
+++ b/notebooks/geosciences/Dynamic_Earth.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "The fundamental theory behind behaviour of the Earth's outer shell, the lithosphere, is called plate tectonics. The Earth is broken into multiple plates that interact at their boundaries. There are three types of interaction - plates can converge, diverge or move along their boundaries.\n",
     "\n",
-    "<img src=\"data/plate_boundaries.png\" alt=\"tectonic plate boundaries on Earth\" style=\"width:600px;\"/>\n",
+    "<img src=\"../images/plate_boundaries.png\" alt=\"tectonic plate boundaries on Earth\" style=\"width:600px;\"/>\n",
     "\n",
     "### Mid-ocean ridges - the divergent boundary\n",
     "\n",
@@ -18,11 +18,11 @@
     "\n",
     "The Earth's magnetic field is not the same over time. On avergae, 4 or 5 magnetic reversals happen within 1 million years. These reversals are recorded on the seafloor as new rocks produced at mid-ocean ridges have magnetite align with magnetic field at a time:\n",
     "\n",
-    "<img src=\"data/magnetic_field_seafloor.png\" alt=\"Magnetic anomalies on seafloor\" style=\"width:600px;\"/>\n",
+    "<img src=\"../images/magnetic_field_seafloor.png\" alt=\"Magnetic anomalies on seafloor\" style=\"width:600px;\"/>\n",
     "\n",
     "Magnetic anomalies can tell about the age of seafloor. These anomalies have been very well mapped across the world and dating techniques such as radioactive decauy of Potassium and Argon make their age bounds very robust. As seen on the picture below, the Bruhnes is the latest magnetic reversal that happened ~800,000 years ago:\n",
     "\n",
-    "<img src=\"data/magnetic_anomalies.png\" alt=\"Magnetic anomalies on seafloor\" style=\"width:600px;\"/>\n",
+    "<img src=\"../images/magnetic_anomalies.png\" alt=\"Magnetic anomalies on seafloor\" style=\"width:600px;\"/>\n",
     "\n",
     "## Exercise\n",
     "### Seafloor age vs. depth relationship\n",
@@ -68,48 +68,59 @@
     "### Seafloor age from magnetic anomalies\n",
     "[Müller et al. (2008)](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2007GC001743) provides a comprehensive dataset of seafloor ages across the world. The dataset was compiled based on various magentic surveys of seafloor, dated independently of Parsons & Sclater (1977) relationship between seafloor age and depth.\n",
     "\n",
-    "The dataset is free to download at ftp://ftp.earthbyte.org/earthbyte/agegrid/2008/Grids/. We downloaded 'age.3.6.nc.bz2' file and plotted using this code:\n",
+    "The dataset is free to download at ftp://ftp.earthbyte.org/earthbyte/agegrid/2008/Grids/. We downloaded 'age.3.6.nc.bz2' file and plotted using this code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load seaflor age downloaded from\n",
+    "# https://www.earthbyte.org/Resources/agegrid2008.html\n",
+    "fname = \"data/seafloor_ages.nc\"\n",
     "\n",
+    "dataset = netcdf_dataset(fname)\n",
     "\n",
-    "    # Load seaflor age downloaded from\n",
-    "    # https://www.earthbyte.org/Resources/agegrid2008.html\n",
-    "    fname = \"data/seafloor_ages.nc\"\n",
+    "# Manual says that age is stored in\n",
+    "# Ma x 100 for storage reasons\n",
+    "age = dataset.variables['z'][:]/100.\n",
+    "lats_age = dataset.variables['y'][:]\n",
+    "lons_age = dataset.variables['x'][:]\n",
     "\n",
-    "    dataset = netcdf_dataset(fname)\n",
+    "# Create figure\n",
+    "plt.figure(figsize=(7,5))\n",
+    "ax = plt.axes(projection=ccrs.Robinson())\n",
+    "ax.coastlines(resolution='110m')\n",
+    "ax.gridlines()\n",
     "\n",
-    "    # Manual says that age is stored in\n",
-    "    # Ma x 100 for storage reasons\n",
-    "    age = dataset.variables['z'][:]/100.\n",
-    "    lats_age = dataset.variables['y'][:]\n",
-    "    lons_age = dataset.variables['x'][:]\n",
+    "vmin = 0\n",
+    "vmax = 200\n",
     "\n",
-    "    # Create figure\n",
-    "    plt.figure(figsize=(7,5))\n",
-    "    ax = plt.axes(projection=ccrs.Robinson())\n",
-    "    ax.coastlines(resolution='110m')\n",
-    "    ax.gridlines()\n",
+    "# Set how many contour lines to display\n",
+    "v = np.linspace(vmin, vmax, 11, endpoint=True)\n",
     "\n",
-    "    vmin = 0\n",
-    "    vmax = 200\n",
+    "# Set how many ticks to display in colourbar\n",
+    "v2 = np.linspace(vmin, vmax, 11, endpoint=True)\n",
     "\n",
-    "    # Set how many contour lines to display\n",
-    "    v = np.linspace(vmin, vmax, 11, endpoint=True)\n",
-    "\n",
-    "    # Set how many ticks to display in colourbar\n",
-    "    v2 = np.linspace(vmin, vmax, 11, endpoint=True)\n",
-    "\n",
-    "    # Create contour plot\n",
-    "    contplot = ax.contourf(lons_age, lats_age, age, v,\n",
-    "                           cmap=\"gist_rainbow\",\n",
-    "                           transform=ccrs.PlateCarree())\n",
-    "    # Create colourbar\n",
-    "    cbar = plt.colorbar(contplot, ax=ax, fraction=0.046, pad=0.01, \n",
-    "                        label='Age [Ma]', ticks = v2)\n",
-    "    plt.show()\n",
-    "    \n",
+    "# Create contour plot\n",
+    "contplot = ax.contourf(lons_age, lats_age, age, v,\n",
+    "                       cmap=\"gist_rainbow\",\n",
+    "                       transform=ccrs.PlateCarree())\n",
+    "# Create colourbar\n",
+    "cbar = plt.colorbar(contplot, ax=ax, fraction=0.046, pad=0.01, \n",
+    "                    label='Age [Ma]', ticks = v2)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The dataset is really large, therefore, we will only display the end result here. Note how easily we can pick out the position of Mid-Atlantic ridge tracing the youngest rocks (red colours) in the Atlantic. The oldest rocks on the other hand are coloured in magenta and occur at the continental margins and in the Pacific.\n",
     "\n",
-    "<img src=\"data/Mueller_2008_map.png\" alt=\"Mueller 2008 magnetic map\" style=\"width:600px;\"/>"
+    "<img src=\"../images/Mueller_2008_map.png\" alt=\"Mueller 2008 magnetic map\" style=\"width:600px;\"/>"
    ]
   },
   {
@@ -726,89 +737,101 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the original dataset is large, we can provide the code and the end result for side by side comparison of the ages calculated based on bathymetry and real age based on magnetic anomalies:\n",
+    "Since the original dataset is large, we can provide the code and the end result for side by side comparison of the ages calculated based on bathymetry and real age based on magnetic anomalies:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.rcParams.update({'font.size': 12})\n",
     "\n",
-    "    plt.rcParams.update({'font.size': 12})\n",
+    "plt.figure(figsize=(7,10))\n",
     "\n",
-    "    plt.figure(figsize=(7,10))\n",
+    "# Create subplot for real age data\n",
+    "ax1 = plt.subplot(2, 1, 1, projection=ccrs.PlateCarree())\n",
     "\n",
-    "    # Create subplot for real age data\n",
-    "    ax1 = plt.subplot(2, 1, 1, projection=ccrs.PlateCarree())\n",
+    "extent = [np.min(lons_etopo), np.max(lons_etopo), np.min(lats_etopo), np.max(lats_etopo)-10]\n",
     "\n",
-    "    extent = [np.min(lons_etopo), np.max(lons_etopo), np.min(lats_etopo), np.max(lats_etopo)-10]\n",
+    "ax1.set_title(\"Seafloor age from magnetic anomalies\")\n",
+    "ax1.set_extent(extent)\n",
+    "ax1.coastlines('110m', lw=1)\n",
     "\n",
-    "    ax1.set_title(\"Seafloor age from magnetic anomalies\")\n",
-    "    ax1.set_extent(extent)\n",
-    "    ax1.coastlines('110m', lw=1)\n",
+    "vmin = 0\n",
+    "vmax = 200\n",
     "\n",
-    "    vmin = 0\n",
-    "    vmax = 200\n",
+    "# Set how many contour lines to display\n",
+    "v = np.linspace(vmin, vmax, 11, endpoint=True)\n",
     "\n",
-    "    # Set how many contour lines to display\n",
-    "    v = np.linspace(vmin, vmax, 11, endpoint=True)\n",
+    "# Set how many ticks to display in colourbar\n",
+    "v2 = np.linspace(vmin, vmax, 11, endpoint=True)\n",
     "\n",
-    "    # Set how many ticks to display in colourbar\n",
-    "    v2 = np.linspace(vmin, vmax, 11, endpoint=True)\n",
+    "# Create contour plot\n",
+    "contplot = ax1.contourf(lons_age, lats_age, age, v,\n",
+    "                       cmap=\"gist_rainbow\",\n",
+    "                       transform=ccrs.PlateCarree())\n",
+    "# Create colourbar\n",
+    "cbar = plt.colorbar(contplot, ax=ax1, fraction=0.046, pad=0.01, \n",
+    "                    label='Age [Ma]', ticks = v2)\n",
     "\n",
-    "    # Create contour plot\n",
-    "    contplot = ax1.contourf(lons_age, lats_age, age, v,\n",
-    "                           cmap=\"gist_rainbow\",\n",
-    "                           transform=ccrs.PlateCarree())\n",
-    "    # Create colourbar\n",
-    "    cbar = plt.colorbar(contplot, ax=ax1, fraction=0.046, pad=0.01, \n",
-    "                        label='Age [Ma]', ticks = v2)\n",
+    "# Sort out gridlines and their density\n",
+    "xticks_extent = list(np.arange(-75, 10, 10))\n",
+    "yticks_extent = list(np.arange(-10, 80, 10))\n",
     "\n",
-    "    # Sort out gridlines and their density\n",
-    "    xticks_extent = list(np.arange(-75, 10, 10))\n",
-    "    yticks_extent = list(np.arange(-10, 80, 10))\n",
-    "\n",
-    "    gl = ax1.gridlines(linewidths=0.1)\n",
-    "    gl.xlabels_top = False\n",
-    "    gl.xlabels_bottom = True\n",
-    "    gl.ylabels_left = True\n",
-    "    gl.ylabels_right = False\n",
-    "    gl.xlocator = mticker.FixedLocator(xticks_extent)\n",
-    "    gl.ylocator = mticker.FixedLocator(yticks_extent)\n",
-    "    gl.xformatter = LONGITUDE_FORMATTER\n",
-    "    gl.yformatter = LATITUDE_FORMATTER\n",
+    "gl = ax1.gridlines(linewidths=0.1)\n",
+    "gl.xlabels_top = False\n",
+    "gl.xlabels_bottom = True\n",
+    "gl.ylabels_left = True\n",
+    "gl.ylabels_right = False\n",
+    "gl.xlocator = mticker.FixedLocator(xticks_extent)\n",
+    "gl.ylocator = mticker.FixedLocator(yticks_extent)\n",
+    "gl.xformatter = LONGITUDE_FORMATTER\n",
+    "gl.yformatter = LATITUDE_FORMATTER\n",
     "\n",
     "\n",
-    "    # Create subplot for predicted age based on elevation\n",
-    "    ax2 = plt.subplot(2, 1, 2, projection=ccrs.PlateCarree())\n",
+    "# Create subplot for predicted age based on elevation\n",
+    "ax2 = plt.subplot(2, 1, 2, projection=ccrs.PlateCarree())\n",
     "\n",
-    "    ax2.set_title(\"Predicted seafloor age from ETOPO1 bathymetry\")\n",
-    "    ax2.set_extent(extent)\n",
-    "    ax2.coastlines('110m', lw=1)\n",
+    "ax2.set_title(\"Predicted seafloor age from ETOPO1 bathymetry\")\n",
+    "ax2.set_extent(extent)\n",
+    "ax2.coastlines('110m', lw=1)\n",
     "\n",
     "\n",
-    "    # Create contour plot\n",
-    "    contplot = ax2.contourf(lons_etopo, lats_etopo, ages_seafloor, v,\n",
-    "                           cmap=\"gist_rainbow\",\n",
-    "                           transform=ccrs.PlateCarree())\n",
-    "    # Create colourbar\n",
-    "    cbar = plt.colorbar(contplot, ax=ax2, fraction=0.046, pad=0.01, \n",
-    "                        label='Predicted seafloor age [Ma]', ticks = v2)\n",
+    "# Create contour plot\n",
+    "contplot = ax2.contourf(lons_etopo, lats_etopo, ages_seafloor, v,\n",
+    "                       cmap=\"gist_rainbow\",\n",
+    "                       transform=ccrs.PlateCarree())\n",
+    "# Create colourbar\n",
+    "cbar = plt.colorbar(contplot, ax=ax2, fraction=0.046, pad=0.01, \n",
+    "                    label='Predicted seafloor age [Ma]', ticks = v2)\n",
     "\n",
-    "    # Sort out gridlines and their density\n",
-    "    xticks_extent = list(np.arange(-75, 10, 10))\n",
-    "    yticks_extent = list(np.arange(-10, 80, 10))\n",
+    "# Sort out gridlines and their density\n",
+    "xticks_extent = list(np.arange(-75, 10, 10))\n",
+    "yticks_extent = list(np.arange(-10, 80, 10))\n",
     "\n",
-    "    gl = ax2.gridlines(linewidths=0.1)\n",
-    "    gl.xlabels_top = False\n",
-    "    gl.xlabels_bottom = True\n",
-    "    gl.ylabels_left = True\n",
-    "    gl.ylabels_right = False\n",
-    "    gl.xlocator = mticker.FixedLocator(xticks_extent)\n",
-    "    gl.ylocator = mticker.FixedLocator(yticks_extent)\n",
-    "    gl.xformatter = LONGITUDE_FORMATTER\n",
-    "    gl.yformatter = LATITUDE_FORMATTER\n",
+    "gl = ax2.gridlines(linewidths=0.1)\n",
+    "gl.xlabels_top = False\n",
+    "gl.xlabels_bottom = True\n",
+    "gl.ylabels_left = True\n",
+    "gl.ylabels_right = False\n",
+    "gl.xlocator = mticker.FixedLocator(xticks_extent)\n",
+    "gl.ylocator = mticker.FixedLocator(yticks_extent)\n",
+    "gl.xformatter = LONGITUDE_FORMATTER\n",
+    "gl.yformatter = LATITUDE_FORMATTER\n",
     "\n",
-    "    plt.subplots_adjust(wspace=0.1)\n",
-    "    plt.show()\n",
-    "    \n",
+    "plt.subplots_adjust(wspace=0.1)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Comparing real seafloor age and age calculated based on depth, we can see that the relationship does not work for ages above 70 Ma. In the real age dataset, we can see that seafloor near continental margins is > 140 Ma old, while according to the equation from Parsons & Sclatter (1977), seafloor there would very young.\n",
     "\n",
-    "<img src=\"data/seafloor_ages_north_atlantic_comparison.png\" alt=\"Real seafloor age vs. age derived from bathymetry\" style=\"width:600px;\"/>"
+    "<img src=\"../images/seafloor_ages_north_atlantic_comparison.png\" alt=\"Real seafloor age vs. age derived from bathymetry\" style=\"width:600px;\"/>"
    ]
   }
  ],
