Add format method to printing notebook

--- a/notebooks/coding/Printing_and_formatting_statements.ipynb
+++ b/notebooks/coding/Printing_and_formatting_statements.ipynb
@@ -172,6 +172,92 @@
     "\n",
     "print(\"I am %.2f m tall.\" % (5*0.3048+4*0.0254))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Format() method:\n",
+    "This method allows to specify positions of the objects we want to insert into a string. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I like dinosaurs and brachiopods.\n",
+      "I like brachiopods and dinosaurs.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"I like {0} and {1}.\".format('dinosaurs', 'brachiopods'))\n",
+    "print(\"I like {1} and {0}.\".format('dinosaurs', 'brachiopods'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also specify a variable name that will go into the string:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I like dinosaurs, brachiopods and ammonites.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"I like {0}, {1} and {other}.\".format('dinosaurs', 'brachiopods', other = 'ammonites'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apart from strings, we can also insert numbers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This fossil is 12 cm long and 5.05 cm wide.\n",
+      "This fossil is 12 cm long and 5.0500 cm wide.\n",
+      "This fossil is 12 cm long and   5.0500 cm wide.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"This fossil is {0:d} cm long and {1:.2f} cm wide.\".format(12, 5.05))\n",
+    "print(\"This fossil is {0:g} cm long and {1:.4f} cm wide.\".format(12.0, 5.05))\n",
+    "print(\"This fossil is {0:g} cm long and {1:8.4f} cm wide.\".format(12.0, 5.05))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Both methods are valid so you can use whichever one suits you better!"
+   ]
   }
  ],
  "metadata": {
